[gd_scene load_steps=4 format=3 uid="uid://coeek8wyo136c"]

[ext_resource type="Script" uid="uid://b803q04yskrtm" path="res://addons/ai_architect/_ui/ai_dock.gd" id="1_31riv"]
[ext_resource type="Script" uid="uid://b5y3ndehf8501" path="res://addons/ai_architect/_ui/kanban_column.gd" id="2_gktra"]

[sub_resource type="LabelSettings" id="LabelSettings_31riv"]
font_size = 20

[node name="AIDock" type="PanelContainer"]
layout_direction = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_31riv")

[node name="Background" type="Panel" parent="."]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2
current_tab = 0

[node name="Engineer" type="MarginContainer" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MainLayout" type="VBoxContainer" parent="TabContainer/Engineer"]
layout_mode = 2
alignment = 1

[node name="HeaderLabel" type="Label" parent="TabContainer/Engineer/MainLayout"]
unique_name_in_owner = true
layout_mode = 2
text = "AI Architect Ready"
label_settings = SubResource("LabelSettings_31riv")
horizontal_alignment = 1

[node name="SystemLabel" type="Label" parent="TabContainer/Engineer/MainLayout"]
unique_name_in_owner = true
layout_mode = 2
text = "âš™ï¸ System / Architectural Rules"
horizontal_alignment = 1

[node name="SystemInput" type="TextEdit" parent="TabContainer/Engineer/MainLayout"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "âš™ï¸ System / Architectural Rules"
wrap_mode = 1
draw_control_chars = true
draw_tabs = true
draw_spaces = true

[node name="HSeparator" type="HSeparator" parent="TabContainer/Engineer/MainLayout"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Engineer/MainLayout"]
layout_mode = 2
alignment = 1

[node name="ApiKeyInput" type="LineEdit" parent="TabContainer/Engineer/MainLayout/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = ""
placeholder_text = "Paste your Gemini API Key here"
alignment = 1
secret = true

[node name="SaveKeyBtn" type="Button" parent="TabContainer/Engineer/MainLayout/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "ğŸ’¾ Save"

[node name="SelectModel" type="Label" parent="TabContainer/Engineer/MainLayout"]
unique_name_in_owner = true
layout_mode = 2
text = "Select Model"
horizontal_alignment = 1

[node name="LangSelector" type="OptionButton" parent="TabContainer/Engineer/MainLayout/SelectModel"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 32.0
offset_bottom = 20.0
selected = 0
item_count = 2
popup/item_0/text = "Ø§Ù„Ø¹Ø±Ø¨ÙŠØ©"
popup/item_0/id = 0
popup/item_1/text = "English"
popup/item_1/id = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Engineer/MainLayout"]
layout_mode = 2
alignment = 1

[node name="ModelSelector" type="OptionButton" parent="TabContainer/Engineer/MainLayout/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 4
selected = 0
item_count = 1
popup/item_0/text = "gemini-2.5-flash"
popup/item_0/id = 0

[node name="RefreshModelsBtn" type="Button" parent="TabContainer/Engineer/MainLayout/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
text = "ğŸ”„ Fetch Models"

[node name="HSeparator2" type="HSeparator" parent="TabContainer/Engineer/MainLayout"]
layout_mode = 2

[node name="PromptInput" type="TextEdit" parent="TabContainer/Engineer/MainLayout"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "AI Architect Ready"
wrap_mode = 1
draw_tabs = true
draw_spaces = true

[node name="HBoxContainer3" type="HBoxContainer" parent="TabContainer/Engineer/MainLayout"]
layout_mode = 2
alignment = 1

[node name="GenerateBtn" type="Button" parent="TabContainer/Engineer/MainLayout/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Ø¥Ù†Ø´Ø§Ø¡ ÙƒÙˆØ¯ GDScript Ø¨Ù†Ø§Ø¡Ù‹ Ø¹Ù„Ù‰ ÙˆØµÙÙƒ."
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "ØªÙˆÙ„ÙŠØ¯ ÙƒÙˆØ¯"

[node name="ReadScriptBtn" type="Button" parent="TabContainer/Engineer/MainLayout/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Ù‚Ø±Ø§Ø¡Ø© Ù…Ø­ØªÙˆÙ‰ Ø§Ù„Ø³ÙƒØ±Ø¨Øª Ø§Ù„Ù…ÙØªÙˆØ­ Ø­Ø§Ù„ÙŠØ§Ù‹."
text = "Ù‚Ø±Ø§Ø¡Ø© Ù…Ù„Ù"

[node name="ApplyEditsBtn" type="Button" parent="TabContainer/Engineer/MainLayout/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Ù…Ø±Ø§Ø¬Ø¹Ø© ÙˆØªØ·Ø¨ÙŠÙ‚ Ø§Ù„ØªØºÙŠÙŠØ±Ø§Øª Ø§Ù„Ù…Ù‚ØªØ±Ø­Ø©."
theme_override_colors/font_color = Color(0.8745098, 0.8745098, 0, 1)
text = "ØªØ·Ø¨ÙŠÙ‚ Ø§Ù„ØªØ¹Ø¯ÙŠÙ„Ø§Øª"

[node name="EnhanceEngBtn" type="Button" parent="TabContainer/Engineer/MainLayout/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Ø¥Ø¹Ø§Ø¯Ø© ØµÙŠØ§ØºØ© Ø·Ù„Ø¨Ùƒ Ù„ÙŠÙƒÙˆÙ† Ø£ÙˆØ¶Ø­ Ù„Ù„Ø°ÙƒØ§Ø¡."
text = "âœ¨ ØªØ­Ø³ÙŠÙ† Ø§Ù„Ø·Ù„Ø¨"

[node name="FixErrorBtn" type="Button" parent="TabContainer/Engineer/MainLayout/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Ø§Ù„ØµÙ‚ Ø§Ù„Ø®Ø·Ø£ Ù‡Ù†Ø§ Ù„ÙŠØªÙ… Ø¥ØµÙ„Ø§Ø­Ù‡."
theme_override_colors/font_color = Color(1, 0.36778843, 0.3002166, 1)
text = "ğŸš‘ Ø¥ØµÙ„Ø§Ø­ Ø®Ø·Ø£"

[node name="StatusLabel" type="Label" parent="TabContainer/Engineer/MainLayout"]
unique_name_in_owner = true
layout_mode = 2
text = "Ø§Ù„Ù†Ø¸Ø§Ù… Ø¬Ø§Ù‡Ø²."
horizontal_alignment = 1

[node name="Planner" type="MarginContainer" parent="TabContainer"]
visible = false
layout_mode = 2
mouse_filter = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Planner"]
layout_mode = 2

[node name="PlannerLabel" type="Label" parent="TabContainer/Planner/VBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 0
text = "Project Planner & Task Manager"
horizontal_alignment = 1

[node name="PlanInput" type="TextEdit" parent="TabContainer/Planner/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
placeholder_text = "Ø§ÙƒØªØ¨ ÙÙƒØ±ØªÙƒ Ù‡Ù†Ø§"
wrap_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Planner/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CreatePlanBtn" type="Button" parent="TabContainer/Planner/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "ØªØ­ÙˆÙŠÙ„ Ø§Ù„ÙÙƒØ±Ø© Ø¥Ù„Ù‰ Ù…Ù‡Ø§Ù… ØªÙ‚Ù†ÙŠØ©."
text = "Ø¥Ù†Ø´Ø§Ø¡ Ø®Ø·Ø©"

[node name="EnhancePlanBtn" type="Button" parent="TabContainer/Planner/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "Ø¥Ø¹Ø§Ø¯Ø© ØµÙŠØ§ØºØ© Ø·Ù„Ø¨Ùƒ Ù„ÙŠÙƒÙˆÙ† Ø£ÙˆØ¶Ø­ Ù„Ù„Ø°ÙƒØ§Ø¡."
text = "âœ¨ ØªØ­Ø³ÙŠÙ† Ø§Ù„Ø·Ù„Ø¨"

[node name="AddManualTaskBtn" type="Button" parent="TabContainer/Planner/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "Ø¥Ø¶Ø§ÙØ© Ø§Ù„Ù†Øµ Ø£Ø¹Ù„Ø§Ù‡ ÙƒÙ…Ù‡Ù…Ø© Ø¬Ø¯ÙŠØ¯Ø©."
text = "+ Ø¥Ø¶Ø§ÙØ© ÙŠØ¯ÙˆÙŠØ©"

[node name="HSeparator" type="HSeparator" parent="TabContainer/Planner/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Planner/VBoxContainer"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 2
size_flags_vertical = 3

[node name="KanbanBoard" type="HBoxContainer" parent="TabContainer/Planner/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Col_Todo" type="VBoxContainer" parent="TabContainer/Planner/VBoxContainer/ScrollContainer/KanbanBoard"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_gktra")

[node name="To_Do" type="Label" parent="TabContainer/Planner/VBoxContainer/ScrollContainer/KanbanBoard/Col_Todo"]
layout_mode = 2
text = "To Do"
horizontal_alignment = 1

[node name="Col_Doing" type="VBoxContainer" parent="TabContainer/Planner/VBoxContainer/ScrollContainer/KanbanBoard"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_gktra")

[node name="Doing" type="Label" parent="TabContainer/Planner/VBoxContainer/ScrollContainer/KanbanBoard/Col_Doing"]
layout_mode = 2
text = "Doing"
horizontal_alignment = 1

[node name="Col_Done" type="VBoxContainer" parent="TabContainer/Planner/VBoxContainer/ScrollContainer/KanbanBoard"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_gktra")

[node name="Done" type="Label" parent="TabContainer/Planner/VBoxContainer/ScrollContainer/KanbanBoard/Col_Done"]
layout_mode = 2
text = "Done"
horizontal_alignment = 1

[node name="PlanStatus" type="Label" parent="TabContainer/Planner/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "Ù„Ø¹Ø±Ø¶ Ø§Ù„Ø­Ø§Ù„Ø©"
horizontal_alignment = 1
